[package]
name = "discord-tunnel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
base116 = "0.1.8"
clap = { version = "4.5.9", features = ["derive"] }
serenity = "0.12.2"
teloxide-core = { version = "0.9.1", default-features = false, features = [
    "rustls",
] }
tokio = { version = "1.38.0", features = ["full"] }
tun = { version = "0.6.1", features = ["async"] }
